<resources>
    <string name="app_name">武科大微校园</string>
    <string name="lib">图书馆</string>
    <string name="list_no_data_lost">暂时还未有寻物启事</string>
    <string name="list_no_data_lost_mine">您还未发布寻物启事</string>
    <string name="progress_loading">正在获取数据..</string>
    <string name="lost">寻物启事</string>
    <string name="found">招领启事</string>
    <string name="list_no_data_found">暂时还未有招领启事</string>
    <string name="list_no_data_found_mine">您还未发布招领启事</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="menu_losing_add">添加</string>
    <string name="menu_losing_mine">我的</string>
    <string name="losing_title_hint">标题</string>
    <string name="losing_phone_hint">手机</string>
    <string name="losing_describe_hint">描述</string>
    <string name="losing_error">出错啦~请检查网络</string>
    <string name="default_name">我还没有名字</string>
    <string name="losing_title_default">红色钱包</string>
    <string name="losing_describe_default">周三早上丢失了红色钱包，在食堂二楼</string>
    <string name="losing_edit">编辑</string>
    <string name="delete_edit">删除</string>
    <string name="losing_detail_default_nickname">详情</string>
    <string name="default_time">2016年9月9日</string>
    <string name="default_phone">138024249542</string>
    <string name="hint_login">请先登录</string>
    <string name="my_lost">我的寻物启事</string>
    <string name="my_found">我的招领启事</string>
    <string name="add_losing">添加寻物启事</string>
    <string name="add_found">添加招领启事</string>
    <string-array name="score_array">
        <item>所有成绩</item>
        <item>本学期成绩</item>
        <item>单科成绩</item>
    </string-array>
    <string-array name="zc_array">
        <item>第1周</item>
        <item>第2周</item>
        <item>第3周</item>
        <item>第4周</item>
        <item>第5周</item>
        <item>第6周</item>
        <item>第7周</item>
        <item>第8周</item>
        <item>第9周</item>
        <item>第10周</item>
        <item>第11周</item>
        <item>第12周</item>
        <item>第13周</item>
        <item>第14周</item>
        <item>第15周</item>
        <item>第16周</item>
        <item>第17周</item>
        <item>第18周</item>
        <item>第19周</item>
        <item>第20周</item>
        <item>第21周</item>
        <item>第22周</item>
        <item>第23周</item>
        <item>第24周</item>
        <item>第25周</item>
    </string-array>
    <string name="title_activity_course">CourseActivity</string>
    <string name="no_data_toast">查询不到相应数据或者教务处故障</string>
    <string name="no_course_data_toast">查询不到课程数据或者教务处故障</string>
    <string name="feedback">提交</string>
    <string name="feedback_hint">您的建议非常宝贵(｡˘•ε•˘｡) </string>
    <string name="mes_name_default">傅碧澄</string>
    <string name="exit">退出</string>
    <string name="mes_no_default">201413131234</string>
    <string name="mes_bind">绑定账号</string>
    <string name="mes_feedback">反馈</string>
    <string name="mes_about">关于</string>
    <string name="login_no">学号</string>
    <string name="pw">教务处密码</string>
    <string name="Login">登录</string>
    <string name="AsPassStr">随便逛一逛</string>
    <string name="stuNo">学号</string>
    <string name="app_name1">卡务中心</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="login_label_username">帐号</string>
    <string name="login_username_hint">请输入学号</string>
    <string name="login_password_hint">默认为身份证后六位</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登 录</string>
    <string name="bind">绑定</string>
    <string name="coming_soon">功能开发中，敬请期待...</string>
    <string name="copyright">Copyright © 领航工作室</string>
    <string name="serverurl">http://202.114.255.76:8087/wkdwxy/update.xml</string>
    <string name="toast_losing">寻物启事添加成功!</string>
    <string name="toast_found">招领启事添加成功!</string>
    <string name="toast_losing_fail">寻物启事添加失败</string>
    <string name="toast_found_fail">招领启事添加失败</string>
    <string name="permission_ask_title">权限申请</string>
    <string name="permission_mes">在设置-应用-权限中开启各项权限，以保证功能的正常使用</string>
    <string name="find_new_version">检测到有新版本</string>
    <string name="course_info">课程信息</string>
    <string name="course_name">名称</string>
    <string name="course_room">教室</string>
    <string name="course_teacher">老师</string>
    <string name="course_js">节数</string>
    <string name="course_zs">周数</string>
    <string name="back">返回</string>
    <string name="delete_course">删除本节课？</string>
    <string name="current_term">当前学期</string>
    <string name="current_week">当前周数</string>
    <string name="set_bg">设置背景</string>
    <string name="add_course">添加课程</string>
    <string name="course_function">功能</string>
    <string name="help">帮助</string>
    <string name="course_remind">童鞋，有节课要上~</string>
    <string name="control_service">关闭提醒</string>
    <string name="menu_open_service">打开上课提醒</string>
    <string name="open_service_toast">上课提醒功能已打开，妈妈再也不担心我找不到教室了~</string>
    <string name="close_service_toast">您已关闭上课提醒功能</string>

    <style name="AnimationActivity" parent="@android:style/Animation.Activity">
        <item name="android:activityOpenEnterAnimation">@anim/push_left_in</item>
        <item name="android:activityOpenExitAnimation">@anim/push_left_out</item>
        <item name="android:activityCloseEnterAnimation">@anim/zoom_enter</item>
        <item name="android:activityCloseExitAnimation">@anim/zoom_exit</item>
    </style>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_help">·教务处课表数据导入\n·修改当前学期，周数\n·设置界面背景\n·自动根据时间换周\n·自己添加课程\n·点击课程查看详细信息(慎用删除)\n·在界面通过持续闪动提醒接下来要上课程\n·每节课前15分钟通过发送锁屏通知提醒上课信息，可点击屏幕右上角的通知图标选择打开或关闭\n\n(若不慎误删课程或想更新课表，只需重新选择当前学期即可。若使用过程中发现问题或建议请反馈给我们(๑•̀ㅂ•́)و✧)</string>
    <string name="losing_help">·添加寻物启事招领启事\n·点击可查看寻物启事招领启事具体内容\n·点击“我的”可以看到自己发布的寻物启事和招领启事并可选择修改或删除\n\n若使用过程中发现问题或建议请反馈给我们(๑•̀ㅂ•́)و✧)</string>
    <string name="lib_search_title">请输入书名</string>
    <string name="hint_search_title">请输入书名</string>
    <string name="find_notification">有新通知</string>
    <string name="mes_update">检查更新</string>
</resources>
