<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_current_term"
        android:title="@string/current_term"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_current_week"
        android:title="@string/current_week"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_set_bg"
        android:title="@string/set_bg"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_add_course"
        android:title="@string/add_course"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_help"
        android:title="@string/help"
        app:showAsAction="never"/>
</menu>