<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/losing_toolbar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/base_action_bar_height"
    android:background="@color/darkWhite"
    android:fitsSystemWindows="true"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    app:theme="@style/AppBaseTheme">

    <RelativeLayout
        android:id="@+id/layout_all_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/losing_detail_default_nickname"
            android:textColor="@color/gray"
            android:textSize="@dimen/subhead" />

        <TextView
            android:id="@+id/tv_time_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/default_time"
            style="@style/Fbc.TextView._Gray"
            android:textSize="@dimen/caption"
            android:layout_alignParentBottom="true"
            />

        <TextView
            android:id="@+id/tv_phone_detail"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textSize="12sp"
            android:drawablePadding="5dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            style="@style/Fbc.TextView._White"
            android:background="@color/green"
            android:text="@string/default_phone"
            android:drawableLeft="@mipmap/icon_phone" >
        </TextView>
    </RelativeLayout>
</android.support.v7.widget.Toolbar>