<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <include layout="@layout/losing_add_toolbar" />

    <EditText
        android:id="@+id/losing_edit_title"
        android:paddingLeft="10dp"
        android:hint="@string/losing_title_hint"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_edit_height"
        android:layout_margin="10dp"
        style="@style/Fbc.TextView._Gray"
        android:background="@drawable/input"
        />

    <EditText
        android:id="@+id/losing_edit_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_edit_height"
        android:paddingLeft="10dp"
        android:layout_margin="10dp"
        android:inputType="phone"
        android:maxLength="11"
        android:hint="@string/losing_phone_hint"
        style="@style/Fbc.TextView._Gray"
        android:background="@drawable/input"
        />

    <EditText
        android:id="@+id/losing_edit_describe"
        android:hint="@string/losing_describe_hint"
        android:background="@drawable/input"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        style="@style/Fbc.TextView._Gray"
        android:minLines="4"
        />

    <!--        <TextView
                android:id="@+id/losing_photo"
                android:layout_width="220dp"
                android:layout_height="170dp"
                android:text="点击添加图片"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:background="@drawable/input"
                />-->

    <!--<ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@mipmap/bt_photo"
        android:layout_gravity="center_horizontal"/>-->


</LinearLayout>
