<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="#ffffff">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/course_info_title"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="10dp"
        android:background="#f7f7f7"
        tools:text="JAVA编程技术"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="8dp"
        android:background="@color/div_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="12dp"
        android:paddingLeft="12dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_info"
        android:textColor="@color/text"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/course_info_title"
            android:drawableLeft="@mipmap/course_name"
            android:drawablePadding="10dp"
            android:text="@string/course_name"/>
            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                tools:text="JAVA编程技术"
                android:textColor="@color/course_info_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/course_info_title"
                android:drawableLeft="@mipmap/course_room"
                android:drawablePadding="10dp"
                android:text="@string/course_room"/>
            <TextView
                android:id="@+id/room_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                tools:text="教三楼105"
                android:textColor="@color/course_info_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/course_info_title"
                android:drawableLeft="@mipmap/course_teacher"
                android:drawablePadding="10dp"
                android:text="@string/course_teacher"/>
            <TextView
                android:id="@+id/teacher_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                tools:text="刘宇"
                android:textColor="@color/course_info_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/course_info_title"
                android:drawableLeft="@mipmap/course_js"
                android:drawablePadding="10dp"
                android:text="@string/course_js"/>
            <TextView
                android:id="@+id/js_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                tools:text="周一7-8节"
                android:textColor="@color/course_info_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/course_info_title"
                android:drawableLeft="@mipmap/course_zs"
                android:drawablePadding="10dp"
                android:text="@string/course_zs"/>
            <TextView
                android:id="@+id/zs_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                tools:text="1-9周"
                android:textColor="@color/course_info_text"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_red_light"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/is_delete_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="#e57373"
                android:layout_weight="1"
                android:text="@string/delete_course"
                android:textColor="@android:color/holo_red_light"/>
            <TextView
                android:enabled="false"
                android:id="@+id/delete_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/add_btn_bg"
                android:text="确定"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
