<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lock"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wustwxy2.activity.LockActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">
        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_remind"
            android:textColor="@color/text_remind"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:drawableRight="@mipmap/remind_close"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/text_remind"/>
            <LinearLayout
                android:id="@+id/content_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/course_info_title_remind"
                android:drawableLeft="@mipmap/course_name"
                android:drawablePadding="10dp"
                android:text="@string/course_name"/>
            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                tools:text="JAVA编程技术"
                android:textColor="@color/course_info_text_remind"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/course_info_title_remind"
                android:drawableLeft="@mipmap/course_room"
                android:drawablePadding="10dp"
                android:text="@string/course_room"/>
            <TextView
                android:id="@+id/room_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                tools:text="教三楼105"
                android:textColor="@color/course_info_text_remind"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/course_info_title_remind"
                android:drawableLeft="@mipmap/course_teacher"
                android:drawablePadding="10dp"
                android:text="@string/course_teacher"/>
            <TextView
                android:id="@+id/teacher_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                tools:text="刘宇"
                android:textColor="@color/course_info_text_remind"/>
        </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
